--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700&family=Raleway:wght@300;400;500;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700&family=Raleway:wght@300;400;500;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet" />
 
     <!-- Style -->
     <link rel="stylesheet" href="css/style.css" />
@@ -228,13 +228,13 @@
 
       <!-- START PREVIOUS CLIENT SECTION -->
       <section class="vertical-scrolling s4">
-        <div class="col-lg-12">
+        <div class="col-lg-12 p-0">
           <img src="./img/img-header-prev-back.png" alt="prevback" class="img-back" />
           <div class="col-4 mx-auto">
             <img src="./img/img-header-prev.png" alt="why" class="img-fluid img-head-prev" />
           </div>
         </div>
-        <div class="container">
+        <div class="container-fluid">
           <div class="row g-1 row-prev">
             <div class="col-prev col-6 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
               <img src="img/img-client-angkasa.png" alt="angkasa" class="img-fluid img-angkasa" />
@@ -292,37 +292,83 @@
           </div>
         </div>
         <div class="container">
-          <div class="row g-1">
-            <div class="col-sm-4 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
-              <img src="img/img-client-angkasa.png" alt="angkasa" class="img-angkasa" />
-              <img src="img/img-satria.png" alt="satria" class="img-satria" />
-              <img src="img/img-client-pnm.png" alt="pnm" class="img-pnm" />
-              <img src="img/img-client-pln.png" alt="pln" class="img-pln" />
-              <img src="img/img-client-ojk.png" alt="ojk" class="img-ojk" />
-              <img src="img/img-client-mega.png" alt="mega" class="img-mega" />
-              <img src="img/img-client-pertamina.png" alt="pertamina" class="img-pertamina" />
-              <img src="img/img-client-aero.png" alt="aero" class="img-aero" />
-              <img src="img/img-client-idx.png" alt="idx" class="img-idx" />
+          <div class="row">
+            <div class="col-prev col-12 col-md-4 col-lg-4 d-flex justify-content-center">
+              <img src="img/img-home-bg.png" alt="home-bg" class="img-fluid img-home" />
+              <span class="fi-by">by <span style="font-weight: 700">capt_fathcapital</span></span>
+              <button class="btn-uncateg"><span class="fi-uncateg">uncategorized</span></button>
+              <div class="fi-div-title"><span class="fi-date">April 8, 2020</span><br /><span class="fi-title">IPO Karya Bersama Anugerah</span></div>
+            </div>
+            <div class="col-prev col-12 col-md-4 col-lg-4 d-flex justify-content-center">
+              <img src="img/img-home-bg.png" alt="home-bg" class="img-fluid img-home" />
+              <span class="fi-by">by <span style="font-weight: 700">capt_fathcapital</span></span>
+              <button class="btn-uncateg"><span class="fi-uncateg">uncategorized</span></button>
+              <div class="fi-div-title"><span class="fi-date">April 8, 2020</span><br /><span class="fi-title">IPO Karya Bersama Anugerah</span></div>
+            </div>
+            <div class="col-prev col-12 col-md-4 col-lg-4 d-flex justify-content-center">
+              <img src="img/img-home-bg.png" alt="home-bg" class="img-fluid img-home" />
+              <span class="fi-by">by <span style="font-weight: 700">capt_fathcapital</span></span>
+              <button class="btn-uncateg"><span class="fi-uncateg">uncategorized</span></button>
+              <div class="fi-div-title"><span class="fi-date">April 8, 2020</span><br /><span class="fi-title">IPO Karya Bersama Anugerah</span></div>
+            </div>
+            <div class="col-prev crop col-6 col-md-4 col-lg-4 d-flex justify-content-center">
+              <img src="img/img-home-bg.png" alt="home-bg" class="img-fluid img-home-grad" />
+            </div>
+            <div class="col-prev crop col-6 col-md-4 col-lg-4 d-flex justify-content-center">
+              <img src="img/img-home-bg.png" alt="home-bg" class="img-fluid img-home-grad" />
+            </div>
+            <div class="col-prev crop col-6 col-md-4 col-lg-4 d-flex justify-content-center">
+              <img src="img/img-home-bg.png" alt="home-bg" class="img-fluid img-home-grad" />
             </div>
           </div>
-          <div class="row mt-2">
-            <div class="col-12 d-flex justify-content-center align-items-center">
-              <span class="text-partner">Official Partner :</span>
+        </div>
+        <div class="div-view-more col-12 col-md-12 col-lg-12 d-flex justify-content-center">
+          <button class="btn-view-more"><span class="fi-view-more">view more</span></button>
+        </div>
+      </section>
+      <!-- END PREVIOUS CLIENT SECTION -->
+
+      <!-- START FOOTER SECTION -->
+      <section class="vertical-scrolling s6">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <img src="img/img-logo.png" alt="img-logo" class="img-fluid img-logo" />
             </div>
           </div>
-          <div class="row g-1 mt-2 d-flex justify-content-center align-items-center">
-            <div class="col-6 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
-              <div class="col-6 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
-                <img src="img/img-client-g20.png" alt="g20" class="img-g20" />
+          <div class="row">
+            <div class="col-foot col-12 col-md-4 col-lg-4 d-flex justify-content-center">
+              <div class="fo-div-title">
+                <span class="fo-title">Jakarta Office :</span><br /><span class="fo-sub-title">Indonesia Stock Exchange Tower 2, 17th Floor Jl. Jend. Sudirman Kav. 52-53, Jakarta 12190, Indonesia</span><br />
+                <br /><span class="fo-title">Singapore Office :</span><br /><span class="fo-sub-title"
+                  >Singapore Land Tower 37th Floor 50 Raffles Place <br />
+                  Singapore 048623</span
+                >
               </div>
-              <div class="col-6 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
-                <img src="img/img-client-wbaf.png" alt="wbaf" class="img-wbaf" />
+            </div>
+            <div class="col-foot col-contact col-12 col-md-4 col-lg-4 d-flex justify-content-center">
+              <div class="fo-div-title">
+                <span class="fo-title">Plaza Simatupang</span><br /><span class="fo-sub-title">TB. Simatupang KAV IS No.1 Jakarta 12310, Indonesia</span><br /><br />
+                <div class="fo-title-contact">
+                  <span class="fo-title">Contact</span><br /><span class="fo-sub-title"
+                    >Email: info@fathcapital.com <br />
+                    Tel: +6221 5157613
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="col-foot col-social col-12 col-md-4 col-lg-4 d-flex justify-content-start">
+              <div class="fo-div-title">
+                <span class="fo-title">Follow Us on Social Media</span><br />
+                <div class="div-ig"><img src="img/img-social-ig.png" alt="ig" class="img-social" /><span class="fo-social">@fath_capital</span></div>
+                <div class="div-fb"><img src="img/img-social-fb.png" alt="ig" class="img-social" /><span class="fo-social">@fath_capital</span></div>
+                <div class="div-linkedin"><img src="img/img-social-linkedin.png" alt="ig" class="img-social" /><span class="fo-social">@fath_capital</span></div>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <!-- END PREVIOUS CLIENT SECTION -->
+      <!-- END FOOTER SECTION -->
     </div>
 
     <!-- FULL PAGE JS -->
@@ -351,7 +397,7 @@
         autoScrolling: true,
         //navigation: true,
         sectionSelector: ".vertical-scrolling",
-        anchors: ["main", "whatwedo", "whyus", "previousclient", "financialinsight"],
+        anchors: ["main", "whatwedo", "whyus", "previousclient", "financialinsight", "footer"],
       });
 
       function hideTitle(x) {
