--- a/index.html
+++ b/index.html
@@ -365,6 +365,7 @@
                 <div class="div-linkedin"><img src="img/img-social-linkedin.png" alt="ig" class="img-social" /><span class="fo-social">@fath_capital</span></div>
               </div>
             </div>
+            <div style="margin-bottom: 50px"></div>
           </div>
         </div>
       </section>
