--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           </div>
           <div class="col-6 col-md-4 col-lg-4 p-0">
             <div class="card card-4" onmouseover="hideTitle(4)" onmouseout="showTitle(4)">
-              <img src="./img/img-nme-2.png" alt="nme" />
+              <img src="./img/img-nme.png" alt="nme" />
               <div class="card-img-overlay d-flex align-items-end">
                 <h5 class="card-title card-title4">
                   New Market <br />
@@ -155,7 +155,7 @@
       <section class="vertical-scrolling s3">
         <div class="col-lg-12 p-0">
           <img src="./img/img-header-why-back.png" alt="whyback" class="img-back" />
-          <div class="col-4 mx-auto">
+          <div class="col-4" style="margin-left: auto; margin-right: auto">
             <img src="./img/img-header-why.png" alt="why" class="img-fluid img-head" />
           </div>
         </div>
