update blog next page

--- a/blog-nextpage.html
+++ b/blog-nextpage.html
@@ -57,15 +57,34 @@
             <button class="btn-gp">Go Public</button>
             <button class="btn-prop">Property</button>
           </div>
-          <div class="row mt-5 ml-2">
-            <div class="col-lg-7"><img src="img/img-blog-big.png" alt="blog-big" class="ml-4" /></div>
-            <div class="col-lg-5 div-blog-big">
-              <span class="blog-big-date">April 8, 2020</span><br /><span class="blog-big-title">IPO Karya Bersama Anugerah</span>
-              <p class="blog-big-p mt-2 mr-2 mb-0">
-                Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. Pada tahun 2019 pemegang saham menambah modal dan perusahaan melakukan revaluasi aset untuk memuluskan rencana Go Publik
-                di […]
-              </p>
-              <a class="blog-big-readmore" href="#">Read More >></a>
+          <div class="row row-blog-nextpage-small">
+            <div class="container">
+              <div class="row">
+                <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-end">
+                  <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
+                  <div class="div-blog-small">
+                    <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
+                    <p class="blog-small-p mt-2 mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
+                    <a class="blog-small-readmore" href="#">Read More >></a>
+                  </div>
+                </div>
+                <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-center">
+                  <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
+                  <div class="div-blog-small">
+                    <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
+                    <p class="blog-small-p mt-2 mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
+                    <a class="blog-small-readmore" href="#">Read More >></a>
+                  </div>
+                </div>
+                <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-start">
+                  <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
+                  <div class="div-blog-small">
+                    <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
+                    <p class="blog-small-p mt-2 mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
+                    <a class="blog-small-readmore" href="#">Read More >></a>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -73,7 +92,7 @@
 
       <!-- START WHAT WE DO SECTION -->
       <section class="vertical-scrolling s2-blog container">
-        <div class="row row-blog-small">
+        <div class="row row-blog-nextpage-small-2">
           <div class="container">
             <div class="row">
               <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-end">
@@ -108,7 +127,7 @@
 
       <!-- START WHY US SECTION -->
       <section class="vertical-scrolling s3-blog">
-        <div class="row row-blog-small-3">
+        <div class="row row-blog-nextpage-small-3">
           <div class="container">
             <div class="row">
               <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-end">
@@ -142,8 +161,8 @@
                   <li>
                     <a href="#" class="mr-4"><img src="img/arrow-left-icon.png" alt="arrow-left" /></a>
                   </li>
-                  <li class="active"><span>1</span></li>
-                  <li><a href="blog-nextpage.html" class="ml-2">2</a></li>
+                  <li><a href="blog.html" class="ml-2">1</a></li>
+                  <li class="active"><a href="blog-nextpage.html" class="ml-2">2</a></li>
                   <li><a href="blog-nextpage.html" class="ml-2">3</a></li>
                   <li>
                     <a href="#" class="ml-4"><img src="img/arrow-right-icon.png" alt="arrow-right" /></a>
