update responsive blog dan blog-nextpage

--- a/blog-nextpage.html
+++ b/blog-nextpage.html
@@ -53,14 +53,16 @@
           <div class="row ml-2">
             <div class="div-search"><span class="span-search">Search blog post....</span></div>
             <button class="btn-search"><img src="img/search-icon.png" alt="search" /> Search</button>
-            <button class="btn-ipo">IPO</button>
-            <button class="btn-gp">Go Public</button>
-            <button class="btn-prop">Property</button>
+            <div class="div-search-bar">
+              <button class="btn-ipo">IPO</button>
+              <button class="btn-gp">Go Public</button>
+              <button class="btn-prop">Property</button>
+            </div>
           </div>
           <div class="row row-blog-nextpage-small">
             <div class="container">
               <div class="row">
-                <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-end">
+                <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
                   <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
                   <div class="div-blog-small">
                     <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
@@ -68,7 +70,7 @@
                     <a class="blog-small-readmore" href="#">Read More >></a>
                   </div>
                 </div>
-                <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-center">
+                <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
                   <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
                   <div class="div-blog-small">
                     <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
@@ -76,7 +78,7 @@
                     <a class="blog-small-readmore" href="#">Read More >></a>
                   </div>
                 </div>
-                <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-start">
+                <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
                   <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
                   <div class="div-blog-small">
                     <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
@@ -95,7 +97,7 @@
         <div class="row row-blog-nextpage-small-2">
           <div class="container">
             <div class="row">
-              <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-end">
+              <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
                 <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
                 <div class="div-blog-small">
                   <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
@@ -103,7 +105,7 @@
                   <a class="blog-small-readmore" href="#">Read More >></a>
                 </div>
               </div>
-              <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-center">
+              <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
                 <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
                 <div class="div-blog-small">
                   <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
@@ -111,7 +113,7 @@
                   <a class="blog-small-readmore" href="#">Read More >></a>
                 </div>
               </div>
-              <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-start">
+              <div class="col-blog-small col-blog-next-small-md col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
                 <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
                 <div class="div-blog-small">
                   <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
@@ -126,11 +128,11 @@
       <!-- END WHAT WE DO SECTION -->
 
       <!-- START WHY US SECTION -->
-      <section class="vertical-scrolling s3-blog">
+      <section class="vertical-scrolling s3-blog-nextpage">
         <div class="row row-blog-nextpage-small-3">
           <div class="container">
             <div class="row">
-              <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-end">
+              <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
                 <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
                 <div class="div-blog-small">
                   <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
@@ -138,7 +140,7 @@
                   <a class="blog-small-readmore" href="#">Read More >></a>
                 </div>
               </div>
-              <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-center">
+              <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
                 <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
                 <div class="div-blog-small">
                   <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
@@ -146,7 +148,7 @@
                   <a class="blog-small-readmore" href="#">Read More >></a>
                 </div>
               </div>
-              <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-start">
+              <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
                 <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
                 <div class="div-blog-small">
                   <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
