--- a/blog.html
+++ b/blog.html
@@ -50,16 +50,18 @@
         <!-- End Navbar -->
         <div class="container">
           <h1 class="display-5 col-sm-12 col-md-12 col-lg-12 ml-4">What’s on FathCapital?</h1>
-          <div class="row ml-2">
+          <div class="row ml-2 row-search-bar">
             <div class="div-search"><span class="span-search">Search blog post....</span></div>
             <button class="btn-search"><img src="img/search-icon.png" alt="search" /> Search</button>
-            <button class="btn-ipo">IPO</button>
-            <button class="btn-gp">Go Public</button>
-            <button class="btn-prop">Property</button>
+            <div class="div-search-bar">
+              <button class="btn-ipo">IPO</button>
+              <button class="btn-gp">Go Public</button>
+              <button class="btn-prop">Property</button>
+            </div>
           </div>
           <div class="row mt-5 ml-2">
-            <div class="col-lg-7"><img src="img/img-blog-big.png" alt="blog-big" class="ml-4" /></div>
-            <div class="col-lg-5 div-blog-big">
+            <div class="col-lg-7 div-img-big"><img src="img/img-blog-big.png" alt="blog-big" class="img-fluid img-big" /></div>
+            <div class="col-sm-12 col-md-10 col-lg-5 div-blog-big">
               <span class="blog-big-date">April 8, 2020</span><br /><span class="blog-big-title">IPO Karya Bersama Anugerah</span>
               <p class="blog-big-p mt-2 mr-2 mb-0">
                 Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. Pada tahun 2019 pemegang saham menambah modal dan perusahaan melakukan revaluasi aset untuk memuluskan rencana Go Publik
@@ -71,12 +73,12 @@
         </div>
       </section>
 
-      <!-- START WHAT WE DO SECTION -->
+      <!-- START BLOG SMALL SECTION -->
       <section class="vertical-scrolling s2-blog container">
         <div class="row row-blog-small">
           <div class="container">
             <div class="row">
-              <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-end">
+              <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
                 <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
                 <div class="div-blog-small">
                   <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
@@ -84,7 +86,7 @@
                   <a class="blog-small-readmore" href="#">Read More >></a>
                 </div>
               </div>
-              <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-center">
+              <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
                 <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
                 <div class="div-blog-small">
                   <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
@@ -92,7 +94,7 @@
                   <a class="blog-small-readmore" href="#">Read More >></a>
                 </div>
               </div>
-              <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-start">
+              <div class="col-blog-small col-blog-small-md col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
                 <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
                 <div class="div-blog-small">
                   <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
@@ -104,14 +106,14 @@
           </div>
         </div>
       </section>
-      <!-- END WHAT WE DO SECTION -->
+      <!-- END BLOG SMALL SECTION -->
 
-      <!-- START WHY US SECTION -->
+      <!-- START BLOG SMALL 2 SECTION -->
       <section class="vertical-scrolling s3-blog">
         <div class="row row-blog-small-3">
           <div class="container">
             <div class="row">
-              <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-end">
+              <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
                 <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
                 <div class="div-blog-small">
                   <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
@@ -119,7 +121,7 @@
                   <a class="blog-small-readmore" href="#">Read More >></a>
                 </div>
               </div>
-              <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-center">
+              <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
                 <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
                 <div class="div-blog-small">
                   <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
@@ -127,7 +129,7 @@
                   <a class="blog-small-readmore" href="#">Read More >></a>
                 </div>
               </div>
-              <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-start">
+              <div class="col-blog-small col-blog-small-md-2 col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
                 <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
                 <div class="div-blog-small">
                   <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
@@ -154,7 +156,7 @@
           </div>
         </div>
       </section>
-      <!-- END WHY US DO SECTION -->
+      <!-- END BLOG SMALL 2 DO SECTION -->
 
       <!-- START FOOTER SECTION -->
       <section class="vertical-scrolling s6">
