--- a/blog-nextpage.html
+++ b/blog-nextpage.html
@@ -63,7 +63,7 @@
 
     <!-- START WHAT WE DO SECTION -->
     <section class="vertical-scrolling s2-blog-nextpage container">
-      <div class="row row-blog-nextpage-small-2">
+      <div class="row row-blog-nextpage-small-2-non">
         <div class="container">
           <div class="row">
             <div class="col-blog-nextpage-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
@@ -106,7 +106,7 @@
                 <a class="blog-small-readmore" href="#">Read More >></a>
               </div>
             </div>
-            <div class="col-blog-nextpage-small col-blog-next-small-md col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
+            <div class="col-blog-nextpage-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
               <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
               <div class="div-blog-small">
                 <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
@@ -161,7 +161,7 @@
     <!-- END WHAT WE DO SECTION -->
 
     <!-- START FOOTER SECTION -->
-    <section class="vertical-scrolling s6 mt-5">
+    <section class="vertical-scrolling s6-nextpage-non mt-5">
       <div class="container">
         <div class="row">
           <div class="col-12">
