--- a/blog-detail.html
+++ b/blog-detail.html
@@ -15,9 +15,19 @@
 
     <!-- Style -->
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/blog.css" />
+    <link rel="stylesheet" href="css/tablet-blog.css" />
+    <link rel="stylesheet" href="css/desktop-blog.css" />
+    <link rel="stylesheet" href="css/blog-nextpage.css" />
+    <link rel="stylesheet" href="css/tablet-blog-nextpage.css" />
+    <link rel="stylesheet" href="css/desktop-blog-nextpage.css" />
+    <link rel="stylesheet" href="css/blog-detail.css" />
+    <link rel="stylesheet" href="css/tablet-blog-detail.css" />
+    <link rel="stylesheet" href="css/desktop-blog-detail.css" />
   </head>
   <body>
-    <section class="s1">
+    <section class="s1-blog-detail">
       <!-- Start Navbar -->
       <nav class="navbar navbar-expand navbar-dark shadow-5-strong">
         <div class="container-fluid">
@@ -77,10 +87,10 @@
     <!-- END WHAT WE DO SECTION -->
 
     <!-- START FOOTER SECTION -->
-    <section class="s6-blog-detail">
+    <section class="s6">
       <div class="container">
-        <div class="row">
-          <div class="col-12">
+        <div class="row mt-2">
+          <div class="col-12 mt-5">
             <img src="img/img-logo.png" alt="img-logo" class="img-fluid img-logo" />
           </div>
         </div>
