--- a/about-us.html
+++ b/about-us.html
@@ -46,10 +46,10 @@
                 <a class="nav-link" aria-current="page" href="blog.html">Blog</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">About Us</a>
+                <a class="nav-link active" href="about-us.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="contact.html">Contact</a>
               </li>
             </ul>
           </div>
