--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                   <a class="nav-link" href="blog.html">Blog</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">About Us</a>
+                  <a class="nav-link" href="about-us.html">About Us</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
+                  <a class="nav-link" href="contact.html">Contact</a>
                 </li>
               </ul>
             </div>
@@ -71,7 +71,7 @@
         <div class="row d-flex justify-content-center">
           <div class="col-6 col-md-4 p-0 d-flex justify-content-end">
             <h1 class="text-wwd mt-auto pr-5 pb-5">
-              What<br/>
+              What<br />
               We Do
             </h1>
           </div>
@@ -102,9 +102,7 @@
                 </h5>
               </div>
               <div class="card-text">
-                <h3>
-                  <span class="font-weight-bold">Bridging, project financing, hedge funds, equities and bonds, money markets, private equities and property</span> with a wide range of traditional and alternative.
-                </h3>
+                <h3><span class="font-weight-bold">Bridging, project financing, hedge funds, equities and bonds, money markets, private equities and property</span> with a wide range of traditional and alternative.</h3>
               </div>
             </div>
           </div>
@@ -119,7 +117,8 @@
               </div>
               <div class="card-text">
                 <h3>
-                  Provide financial advisory to <span class="font-weight-bold">maximize corporate valuation</span> as well as <span class="font-weight-bold">financial audit</span> and <span class="font-weight-bold">restructuring, due diligence for private investment</span> and <span class="font-weight-bold">IPO/ICO preparation</span>.
+                  Provide financial advisory to <span class="font-weight-bold">maximize corporate valuation</span> as well as <span class="font-weight-bold">financial audit</span> and
+                  <span class="font-weight-bold">restructuring, due diligence for private investment</span> and <span class="font-weight-bold">IPO/ICO preparation</span>.
                 </h3>
               </div>
             </div>
@@ -135,7 +134,8 @@
               </div>
               <div class="card-text">
                 <h3>
-                  Assist diverge corporate actions and commercial deals <span class="font-weight-bold">such shares stock arrangements, investment/divestment options, merger and acquisition, also deal forensic and dispute investigation</span>.
+                  Assist diverge corporate actions and commercial deals
+                  <span class="font-weight-bold">such shares stock arrangements, investment/divestment options, merger and acquisition, also deal forensic and dispute investigation</span>.
                 </h3>
               </div>
             </div>
@@ -151,7 +151,8 @@
               </div>
               <div class="card-text">
                 <h3>
-                  Provide seed funding, raising growth capital, <span class="font-weight-bold">advance startup business ideas, strengthen the team foundation, and connect and scale up</span> ventures growth to the industrial scale acceptance and series A/B progression until the IPO stage.
+                  Provide seed funding, raising growth capital, <span class="font-weight-bold">advance startup business ideas, strengthen the team foundation, and connect and scale up</span> ventures growth to the industrial scale
+                  acceptance and series A/B progression until the IPO stage.
                 </h3>
               </div>
             </div>
@@ -303,21 +304,21 @@
           </div>
           <div class="col-10 mt-5">
             <div class="row d-flex justify-content-center">
-              <div class="col-12 col-md-4 d-flex justify-content-center insight" style="background:url(img/img-home-bg.png) center center / cover no-repeat;">
+              <div class="col-12 col-md-4 d-flex justify-content-center insight" style="background: url(img/img-home-bg.png) center center / cover no-repeat">
                 <div class="insight-meta">
                   <span class="fi-by">by <span style="font-weight: 700">capt_fathcapital</span></span>
                   <button class="btn btn-uncateg"><span class="fi-uncateg">uncategorized</span></button>
                   <div class="fi-div-title"><span class="fi-date">April 8, 2020</span><br /><span class="fi-title">IPO Karya Bersama Anugerah</span></div>
                 </div>
               </div>
-              <div class="col-12 col-md-4 d-flex justify-content-center insight" style="background:url(img/img-home-bg.png) center center / cover no-repeat;">
+              <div class="col-12 col-md-4 d-flex justify-content-center insight" style="background: url(img/img-home-bg.png) center center / cover no-repeat">
                 <div class="insight-meta">
                   <span class="fi-by">by <span style="font-weight: 700">capt_fathcapital</span></span>
                   <button class="btn btn-uncateg"><span class="fi-uncateg">uncategorized</span></button>
                   <div class="fi-div-title"><span class="fi-date">April 8, 2020</span><br /><span class="fi-title">IPO Karya Bersama Anugerah</span></div>
                 </div>
               </div>
-              <div class="col-12 col-md-4 d-flex justify-content-center insight" style="background:url(img/img-home-bg.png) center center / cover no-repeat;">
+              <div class="col-12 col-md-4 d-flex justify-content-center insight" style="background: url(img/img-home-bg.png) center center / cover no-repeat">
                 <div class="insight-meta">
                   <span class="fi-by">by <span style="font-weight: 700">capt_fathcapital</span></span>
                   <button class="btn btn-uncateg"><span class="fi-uncateg">uncategorized</span></button>
@@ -327,16 +328,13 @@
             </div>
             <div class="row d-flex justify-content-center hide-on-mobile">
               <div class="col-12 col-md-4 d-flex justify-content-center crop-div">
-                <div class="crop-insight" style="background:linear-gradient(rgba(16, 24, 32, 0) 0%, rgb(16, 24, 32) 35%),
-                url('img/img-home-bg.png') center center / cover no-repeat;"></div>
+                <div class="crop-insight" style="background: linear-gradient(rgba(16, 24, 32, 0) 0%, rgb(16, 24, 32) 35%), url('img/img-home-bg.png') center center / cover no-repeat"></div>
               </div>
               <div class="col-12 col-md-4 d-flex justify-content-center crop-div">
-                <div class="crop-insight" style="background:linear-gradient(rgba(16, 24, 32, 0) 0%, rgb(16, 24, 32) 35%),
-                url('img/img-home-bg.png') center center / cover no-repeat;"></div>
+                <div class="crop-insight" style="background: linear-gradient(rgba(16, 24, 32, 0) 0%, rgb(16, 24, 32) 35%), url('img/img-home-bg.png') center center / cover no-repeat"></div>
               </div>
               <div class="col-12 col-md-4 d-flex justify-content-center crop-div">
-                <div class="crop-insight" style="background:linear-gradient(rgba(16, 24, 32, 0) 0%, rgb(16, 24, 32) 35%),
-                url('img/img-home-bg.png') center center / cover no-repeat;"></div>
+                <div class="crop-insight" style="background: linear-gradient(rgba(16, 24, 32, 0) 0%, rgb(16, 24, 32) 35%), url('img/img-home-bg.png') center center / cover no-repeat"></div>
               </div>
             </div>
             <div class="row d-flex justify-content-center div-view-more mb-4">
