--- a/about-us.html
+++ b/about-us.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <div class="container-fluid">
-      <img src="img/bg-about-us.png" alt="bg-img.png" class="img-main-about" />
+      <img src="img/bg-about-us-crop.png" alt="bg-about-us-crop.png" class="img-main-about" />
     </div>
     <section class="s1-blog-detail">
       <!-- Start Navbar -->
