--- a/blog.html
+++ b/blog.html
@@ -71,7 +71,7 @@
                 Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. Pada tahun 2019 pemegang saham menambah modal dan perusahaan melakukan revaluasi aset untuk memuluskan rencana Go Publik
                 di […]
               </p>
-              <a class="blog-big-readmore" href="#">Read More >></a>
+              <a class="blog-big-readmore" href="blog-detail.html">Read More >></a>
             </div>
           </div>
         </div>
@@ -87,7 +87,7 @@
                 <div class="div-blog-small">
                   <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
                   <p class="blog-small-p mt-2 mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
-                  <a class="blog-small-readmore" href="#">Read More >></a>
+                  <a class="blog-small-readmore" href="blog-detail.html">Read More >></a>
                 </div>
               </div>
               <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
@@ -95,7 +95,7 @@
                 <div class="div-blog-small">
                   <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
                   <p class="blog-small-p mt-2 mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
-                  <a class="blog-small-readmore" href="#">Read More >></a>
+                  <a class="blog-small-readmore" href="blog-detail.html">Read More >></a>
                 </div>
               </div>
               <div class="col-blog-small col-blog-small-md col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
@@ -103,7 +103,7 @@
                 <div class="div-blog-small">
                   <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
                   <p class="blog-small-p mt-2 mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
-                  <a class="blog-small-readmore" href="#">Read More >></a>
+                  <a class="blog-small-readmore" href="blog-detail.html">Read More >></a>
                 </div>
               </div>
             </div>
@@ -122,7 +122,7 @@
                 <div class="div-blog-small">
                   <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
                   <p class="blog-small-p mt-2 mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
-                  <a class="blog-small-readmore" href="#">Read More >></a>
+                  <a class="blog-small-readmore" href="blog-detail.html">Read More >></a>
                 </div>
               </div>
               <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
@@ -130,7 +130,7 @@
                 <div class="div-blog-small">
                   <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
                   <p class="blog-small-p mt-2 mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
-                  <a class="blog-small-readmore" href="#">Read More >></a>
+                  <a class="blog-small-readmore" href="blog-detail.html">Read More >></a>
                 </div>
               </div>
               <div class="col-blog-small col-blog-small-md-2 col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
@@ -138,7 +138,7 @@
                 <div class="div-blog-small">
                   <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
                   <p class="blog-small-p mt-2 mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
-                  <a class="blog-small-readmore" href="#">Read More >></a>
+                  <a class="blog-small-readmore" href="blog-detail.html">Read More >></a>
                 </div>
               </div>
             </div>
