--- a/blog-nextpage.html
+++ b/blog-nextpage.html
@@ -75,7 +75,7 @@
                   <div class="div-blog-small">
                     <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
                     <p class="blog-small-p mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
-                    <a class="blog-small-readmore" href="#">Read More >></a>
+                    <a class="blog-small-readmore" href="blog-detail.html">Read More >></a>
                   </div>
                 </div>
                 <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
@@ -83,7 +83,7 @@
                   <div class="div-blog-small">
                     <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
                     <p class="blog-small-p mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
-                    <a class="blog-small-readmore" href="#">Read More >></a>
+                    <a class="blog-small-readmore" href="blog-detail.html">Read More >></a>
                   </div>
                 </div>
                 <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
@@ -91,7 +91,7 @@
                   <div class="div-blog-small">
                     <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
                     <p class="blog-small-p mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
-                    <a class="blog-small-readmore" href="#">Read More >></a>
+                    <a class="blog-small-readmore" href="blog-detail.html">Read More >></a>
                   </div>
                 </div>
               </div>
@@ -110,7 +110,7 @@
                 <div class="div-blog-small">
                   <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
                   <p class="blog-small-p mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
-                  <a class="blog-small-readmore" href="#">Read More >></a>
+                  <a class="blog-small-readmore" href="blog-detail.html">Read More >></a>
                 </div>
               </div>
               <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
@@ -118,7 +118,7 @@
                 <div class="div-blog-small">
                   <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
                   <p class="blog-small-p mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
-                  <a class="blog-small-readmore" href="#">Read More >></a>
+                  <a class="blog-small-readmore" href="blog-detail.html">Read More >></a>
                 </div>
               </div>
               <div class="col-blog-small col-blog-next-small-md col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
@@ -126,7 +126,7 @@
                 <div class="div-blog-small">
                   <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
                   <p class="blog-small-p mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
-                  <a class="blog-small-readmore" href="#">Read More >></a>
+                  <a class="blog-small-readmore" href="blog-detail.html">Read More >></a>
                 </div>
               </div>
             </div>
@@ -145,7 +145,7 @@
                 <div class="div-blog-small">
                   <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
                   <p class="blog-small-p mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
-                  <a class="blog-small-readmore" href="#">Read More >></a>
+                  <a class="blog-small-readmore" href="blog-detail.html">Read More >></a>
                 </div>
               </div>
               <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
@@ -153,7 +153,7 @@
                 <div class="div-blog-small">
                   <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
                   <p class="blog-small-p mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
-                  <a class="blog-small-readmore" href="#">Read More >></a>
+                  <a class="blog-small-readmore" href="blog-detail.html">Read More >></a>
                 </div>
               </div>
               <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
@@ -161,7 +161,7 @@
                 <div class="div-blog-small">
                   <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
                   <p class="blog-small-p mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
-                  <a class="blog-small-readmore" href="#">Read More >></a>
+                  <a class="blog-small-readmore" href="blog-detail.html">Read More >></a>
                 </div>
               </div>
             </div>
